index.css
/* ... */
.profile-card {
    display: flex;
    justify-content: left;
    align-items: left;
    gap: 60px;
    margin: 50px auto;
}

/* Profile Picture */
.profile-pic {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    object-fit: cover;
    border: 3px solid black;
    margin-bottom: 10px;
    margin-left: 250px;
}

/* Hover effect */
.profile-pic:hover {
    transform: scale(1.25);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.profile-name {
    font-size: 40px;
    font-weight: bold;
    margin-top: 20px;
    color: rgb(79, 127, 201);
    text-shadow: 1px 1px 1px black;
    margin-left: 10px;
}

.profile-minibio {
    font-size: 25px;
    font-weight: bold;
    color: rgb(79, 127, 201);
    text-shadow: 10px 10px 10px black;
    margin-left: 10px;
}

.Bio-Section p {
    margin-left: 10px;
    font-size: 22px;
}
/* --------------------------------------------------------------------------------------------------- */

/* ---------------------------------Featured Projects Section --------------------------------------------- */

.featured-section {
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
    justify-content: center;

}
.overlay{
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.7);
    color: white;
    padding: 50px;
    transform: translateY(100%);
    transition: transform 0.4s ease;
}
/* Sentiment Card Behaviour Game Jam Montreal 2026 */
.Sentiment-card{
    position: relative;
    width: 500px;
    overflow: hidden;
    border-radius: 40px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.Sentiment-card img{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.Sentiment-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.Sentiment-card:hover .overlay{
    transform: translateY(0);
}
/* ChessMate Card */
.CM-card{
    position: relative;
    width: 500px;
    overflow: hidden;
    border-radius: 40px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.CM-card img{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.CM-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.CM-card:hover .overlay{
    transform: translateY(0);
}

/* SpeedRacers Card */
.SR-card{
    position: relative;
    gap: 40px;
    width: 500px;
    overflow: hidden;
    border-radius: 40px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.SR-card video{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.SR-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.SR-card:hover .overlay{
    transform: translateY(0);
}
/* LeapCity2 Card */
.LC2-card{
    position: relative;
    width: 500px;
    overflow: hidden;
    border-radius: 50px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.LC2-card video{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.LC2-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.LC2-card:hover .overlay{
    transform: translateY(0);
}
/* MyGlidingSim Card */
.MGS-card{
    position: relative;
    width: 500px;
    overflow: hidden;
    border-radius: 50px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.MGS-card video{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.MGS-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.MGS-card:hover .overlay{
    transform: translateY(0);
}

/* InfiniteTrigger Card */
.IFTG-card{
    position: relative;
    width: 500px;
    overflow: hidden;
    border-radius: 50px;
    border: 4px solid #1e0f3f;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.IFTG-card img{
    width: 100%;
    height: 100%;
    display: block;
    transition: transform 0.4 ease;
    text-shadow: 10px 10px 10px black;
}

.IFTG-card:hover{
    transform: scale(1.05);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.IFTG-card:hover .overlay{
    transform: translateY(0);
}


/* ---------------------------------Featured Projects Section --------------------------------------------- */

/* ---------------------------- EDUCATION Section--------------------------------------------- */
.snapchat-avatar {
    display: flex;
    margin-left: 500px;
}

.snapchat-avatar img {
    width: 350px;
    height: 350px;
    border-radius: 50%;
    object-fit: cover;
    margin-right: 20px;

}

/* Lasalle FlexBox Card */
.Education-section {
    display: flex;
}

.Lasalle-card {
    margin-top: 60px;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    border: 4px solid #1e0f3f;
    background: rgb(41, 41, 40);
    border-radius: 20px;
    padding: 25px;
    width: 420px;
    height: auto;
    max-width: 500px;
    margin-left: 50px;
    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3 ease;
}

.Lasalle-card h1 {
    color: white;
    text-shadow: 10px 10px 10px black;
}

.Lasalle-card h4 {
    font-weight: bold;
    font-size: auto;
    color: white;
    text-shadow: 10px 10px 10px black;
}

.Lasalle-card p {
    align-items: left;
    text-shadow: 10px 10px 10px black;
    text-align: left;
}

.Lasalle-card:hover {
    transform: scale(1.10);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
/* ... */

